fix(pos-mcp-server): resolve PR #987 spring-ai orchestration findings